# adk_cartera_bancaria

./: .env.example  README.md  arquitectura.md  main.py  pipeline.py  pyproject.toml  requirements.txt
data/: g3_cartera_clientes.csv
output/: cartera_clasificada.csv  reporte_auditoria.txt
tests/: test_pipeline_import.py
tools/: __init__.py  agent_tools.py  regla_engine.py
