[project]
name = "adk_cartera_bancaria"
version = "0.1.0"
description = "Clasificación de Cartera Bancaria con Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
